--- a/membership-token/cli/Cargo.toml
+++ b/membership-token/cli/Cargo.toml
@@ -11,5 +11,7 @@ clap = { version = "3.0.5", features = [ "derive" ] }
 solana-sdk = "1.9.4"
 solana-client = "1.9.4"
 mpl-membership-token = { path = "../program", features = [ "no-entrypoint" ] }
+mpl-token-metadata = { path = "../../token-metadata/program", features = [ "no-entrypoint" ] }
 borsh = "0.9.1"
 spl-token = { version = "3.2.0", features = [ "no-entrypoint" ] }
+anchor-lang = "0.19.0"
