--- a/private-metadata/program/Cargo.toml
+++ b/private-metadata/program/Cargo.toml
@@ -28,6 +28,7 @@ curve25519-dalek = { path = "/Users/lwu/code/solana/curve25519-dalek", features 
 curve25519-dalek-onchain = { path = "/Users/lwu/code/solana/curve25519-dalek-onchain/program", features = ["no-entrypoint"] }
 lazy_static = "1.4.0"
 merlin = { path = "/Users/lwu/code/solana/merlin" }
+mpl-token-metadata = { path = "../../token-metadata/program", features = ["no-entrypoint"] }
 num-derive = "0.3"
 num-traits = "0.2"
 serde = { version = "1.0", features = ["derive"] }
@@ -37,9 +38,6 @@ spl-associated-token-account = { version = "1.0.3", features = [
     "no-entrypoint"
 ] }
 spl-token = { version="3.2.0", features = [ "no-entrypoint" ] }
-spl-token-metadata = { version = "0.0.1", features = [
-    "no-entrypoint"
-] }
 subtle = "2"
 thiserror = "1"
 zeroize = { version = "1.2.0", default-features = false, features = ["zeroize_derive"] }
@@ -50,7 +48,6 @@ bs58 = "0.4.0"
 rand_core = "0.6.3"
 serde_json = "1.0"
 solana-sdk = "1.9.3"
-mpl-token-metadata = { path = "../../token-metadata/program" }
 
 
 [dev-dependencies]
