--- a/membership-token/js/package.json
+++ b/membership-token/js/package.json
@@ -12,7 +12,9 @@
     "postpublish": "git push origin && git push origin --tags",
     "build:docs": "typedoc",
     "build": "rimraf dist && tsc -p tsconfig.json",
-    "test": "echo mpl-membership-token tests coming up ...",
+    "amman:start": "DEBUG=\"amman*\" amman validator",
+    "amman:stop": "pkill solana-test-validator",
+    "test": "tape ./dist/test/*.test.js",
     "api:gen": "node scripts/api-gen-ts.js && prettier --write ./src/**/*.ts",
     "lint": "eslint \"{src,test}/**/*.ts\" --format stylish",
     "fix:lint": "yarn lint --fix",
@@ -43,8 +45,10 @@
     "@solana/web3.js": "^1.31.0"
   },
   "devDependencies": {
+    "@metaplex-foundation/amman": "^0.0.9",
     "eslint": "^8.3.0",
     "rimraf": "^3.0.2",
+    "tape": "^5.3.2",
     "typedoc": "^0.22.10"
   }
 }
