--- a/private-metadata/cli/Cargo.toml
+++ b/private-metadata/cli/Cargo.toml
@@ -16,7 +16,7 @@ bytemuck = { version = "1.7.2", features = ["derive"] }
 clap = "2.33.3"
 curl = "0.4.41"
 curve25519-dalek = { path = "/Users/lwu/code/solana/curve25519-dalek", features = ["serde"] }
-curve25519-dalek-onchain = { path = "/Users/lwu/code/solana/curve25519-dalek-onchain/program", features = ["no-entrypoint"] }
+curve25519-dalek-onchain = { git = "https://github.com/lwus/curve25519-dalek-onchain", features = ["no-entrypoint"] }
 futures = "0.3.18"
 openssl = "0.10.38"
 private-metadata = { path = "../program", features = ["no-entrypoint"] }
