--- a/token-vault/program/Cargo.toml
+++ b/token-vault/program/Cargo.toml
@@ -1,8 +1,8 @@
 [package]
 name = "mpl-token-vault"
-version = "0.0.1"
+version = "0.1.0"
 description = "Metaplex Token Vault"
-authors = ["Metaplex Maintainers <maintainers@metaplex.com>"]
+authors = ["Metaplex Developers <dev@metaplex.com>"]
 repository = "https://github.com/metaplex-foundation/metaplex-program-library"
 license = "Apache-2.0"
 edition = "2018"
