--- a/membership-token/js/package.json
+++ b/membership-token/js/package.json
@@ -40,7 +40,7 @@
   "author": "Metaplex Maintainers <contact@metaplex.com>",
   "license": "Apache-2.0",
   "dependencies": {
-    "@metaplex-foundation/beet": "^0.0.1",
+    "@metaplex-foundation/beet": "0.0.7",
     "@metaplex-foundation/beet-solana": "^0.0.1",
     "@solana/spl-token": "^0.1.8",
     "@solana/web3.js": "^1.31.0"
@@ -48,6 +48,7 @@
   "devDependencies": {
     "@metaplex-foundation/amman": "^0.0.9",
     "@metaplex-foundation/mpl-token-metadata": "1.1.0",
+    "@metaplex-foundation/solita": "^0.0.2",
     "@types/debug": "^4.1.7",
     "@types/tape": "^4.13.2",
     "debug": "^4.3.3",
