--- a/membership-token/js/package.json
+++ b/membership-token/js/package.json
@@ -40,7 +40,7 @@
   "author": "Metaplex Maintainers <contact@metaplex.com>",
   "license": "Apache-2.0",
   "dependencies": {
-    "@metaplex-foundation/beet": "0.0.7",
+    "@metaplex-foundation/beet": "^0.0.7",
     "@metaplex-foundation/beet-solana": "^0.0.1",
     "@solana/spl-token": "^0.1.8",
     "@solana/web3.js": "^1.31.0"
