--- a/metaplex/js/package.json
+++ b/metaplex/js/package.json
@@ -12,7 +12,14 @@
     "postpublish": "git push origin && git push origin --tags",
     "build:docs": "typedoc",
     "build": "rimraf dist && tsc -p tsconfig.json",
-    "test": "echo mpl-metaplex tests coming up ...",
+    "test:build": "esr ./test/setup/build.ts",
+    "test:build-local-mpl": "LOCAL_MPL=1 esr ./test/setup/build.ts",
+    "test:init": "DEBUG=\"amman*\" amman validator",
+    "test:init-local-mpl": "DEBUG=\"amman*\" LOCAL_MPL=1 amman validator",
+    "test:all": "yarn test:build && yarn test:init && yarn test",
+    "test:all-local-mpl": "yarn test:build-local-mpl && yarn test:init-local-mpl && yarn test",
+    "test": "jest --silent false",
+    "test:watch": "jest --watch",
     "lint": "eslint \"{src,test}/**/*.ts\" --format stylish",
     "fix:lint": "yarn lint --fix",
     "prettier": "prettier \"{src,test}/**/*.ts\" --check",
@@ -45,7 +52,15 @@
     "@solana/web3.js": "^1.31.0"
   },
   "devDependencies": {
+    "@metaplex-foundation/amman": "^0.0.9",
+    "@types/jest": "^27.4.0",
+    "esbuild": "^0.14.14",
+    "esbuild-runner": "^2.2.1",
     "eslint": "^8.3.0",
-    "rimraf": "^3.0.2"
+    "jest": "^27.4.7",
+    "node-stream-zip": "^1.15.0",
+    "rimraf": "^3.0.2",
+    "ts-jest": "^27.1.3",
+    "ts-node": "^10.4.0"
   }
 }
