--- a/metaplex/js/package.json
+++ b/metaplex/js/package.json
@@ -12,11 +12,12 @@
     "postpublish": "git push origin && git push origin --tags",
     "build:docs": "typedoc",
     "build": "rimraf dist && tsc -p tsconfig.json",
+    "pretest": "yarn build",
     "test:build": "esr ./test/setup/build.ts",
-    "test:init": "DEBUG=\"amman*\" amman validator",
-    "test:all": "yarn test:build && yarn test:init && yarn test",
-    "test": "jest --silent false",
-    "test:watch": "jest --watch",
+    "amman:start": "DEBUG=\"amman*\" amman validator",
+    "amman:stop": "pkill solana-test-validator",
+    "test:all": "yarn test:build && yarn amman:start && yarn test",
+    "test": "tape ./dist/test/*.test.js",
     "lint": "eslint \"{src,test}/**/*.ts\" --format stylish",
     "fix:lint": "yarn lint --fix",
     "prettier": "prettier \"{src,test}/**/*.ts\" --check",
@@ -50,14 +51,11 @@
   },
   "devDependencies": {
     "@metaplex-foundation/amman": "^0.0.9",
-    "@types/jest": "^27.4.0",
     "esbuild": "^0.14.14",
     "esbuild-runner": "^2.2.1",
     "eslint": "^8.3.0",
-    "jest": "^27.4.7",
     "node-stream-zip": "^1.15.0",
     "rimraf": "^3.0.2",
-    "ts-jest": "^27.1.3",
-    "ts-node": "^10.4.0"
+    "tape": "^5.4.1"
   }
 }
