--- a/membership-token/js/package.json
+++ b/membership-token/js/package.json
@@ -12,6 +12,7 @@
     "amman:start": "DEBUG=\"amman*\" amman validator",
     "amman:stop": "pkill solana-test-validator",
     "test": "DEBUG=\"mpl:tm-test:*\" tape ./dist/test/*.test.js",
+    "test:local": "yarn build && yarn test",
     "api:gen": "node scripts/api-gen-ts.js && prettier --write ./src/**/*.ts",
     "lint": "eslint \"{src,test}/**/*.ts\" --format stylish",
     "fix:lint": "yarn lint --fix",
@@ -50,6 +51,7 @@
     "@types/tape": "^4.13.2",
     "debug": "^4.3.3",
     "eslint": "^8.3.0",
+    "prettier": "^2.5.1",
     "rimraf": "^3.0.2",
     "supports-color": "^9.2.1",
     "tape": "^5.3.2"
