--- a/fixed-price-sale/program/Cargo.toml
+++ b/fixed-price-sale/program/Cargo.toml
@@ -19,7 +19,7 @@ default = []
 anchor-lang = "0.20.1"
 anchor-spl = "0.20.1"
 spl-token = "3.2.0"
-mpl-token-metadata = { path = "../../token-metadata/program", features = [ "no-entrypoint" ], version="1.1.0" }
+mpl-token-metadata = { features = [ "no-entrypoint" ], version="1.1.0" }
 
 [dev-dependencies]
 anchor-client = "0.20.1"
