--- a/.github/actions/build-fixed-price-sale/action.yml
+++ b/.github/actions/build-fixed-price-sale/action.yml
@@ -4,7 +4,7 @@
 # - ./.github/actions/install-solana
 # - ./.github/actions/install-rust
 
-name: Build Membership Token
+name: Build Fixed Price Sale
 runs:
   using: 'composite'
   steps:
