--- a/fixed-price-sale/js/package.json
+++ b/fixed-price-sale/js/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@metaplex-foundation/mpl-fixed-price-sale",
   "version": "0.3.0",
-  "description": "MPL Membership Token JavaScript API.",
+  "description": "MPL Fixed Price Sale JavaScript API.",
   "main": "dist/src/mpl-fixed-price-sale.js",
   "types": "dist/src/mpl-fixed-price-sale.d.ts",
   "scripts": {
