--- a/auction-house/program/Cargo.toml
+++ b/auction-house/program/Cargo.toml
@@ -18,18 +18,18 @@ test-bpf = []
 [dependencies]
 anchor-lang = "=0.19.0"
 anchor-spl = "=0.19.0"
-spl-token = { version = "=3.2",  features = ["no-entrypoint"] }
-spl-associated-token-account = {version = "1.0.3", features = ["no-entrypoint"]}
-mpl-token-metadata = { version="1.1.0", features = [ "no-entrypoint" ] }
-thiserror = "1.0"
-arrayref = "0.3.6"
+spl-token = { version = "~3.2",  features = ["no-entrypoint"] }
+spl-associated-token-account = {version = "~1.0.3", features = ["no-entrypoint"]}
+mpl-token-metadata = { version="~1.1.0", features = [ "no-entrypoint" ] }
+thiserror = "~1.0"
+arrayref = "~0.3.6"
 
 [dev-dependencies]
-anchor-client = "0.20.1"
-shellexpand = "2.1.0"
-serde_json = "1.0"
-solana-program-test = "=1.9.5"
-solana-program = "=1.9.5"
-solana-sdk = "=1.9.5"
+anchor-client = "~0.20.1"
+shellexpand = "~2.1.0"
+serde_json = "~1.0"
+solana-program-test = "~1.9.5"
+solana-program = "~1.9.5"
+solana-sdk = "~1.9.5"
 mpl-testing-utils={path="../../core/rust/testing-utils", version="0.0.1"}
-env_logger="0.9.0"
+env_logger="~0.9.0"
