--- a/auction-house/program/Cargo.toml
+++ b/auction-house/program/Cargo.toml
@@ -16,8 +16,8 @@ default = []
 test-bpf = []
 
 [dependencies]
-anchor-lang = "=0.19.0"
-anchor-spl = "=0.19.0"
+anchor-lang = "~0.19.0"
+anchor-spl = "~0.19.0"
 spl-token = { version = "~3.2",  features = ["no-entrypoint"] }
 spl-associated-token-account = {version = "~1.0.3", features = ["no-entrypoint"]}
 mpl-token-metadata = { version="~1.1.0", features = [ "no-entrypoint" ] }
