--- a/auction-house/program/Cargo.toml
+++ b/auction-house/program/Cargo.toml
@@ -28,6 +28,7 @@ arrayref = "0.3.6"
 
 [dev-dependencies]
 anchor-client = "0.20.1"
+claim = "0.5.0"
 shellexpand = "2.1.0"
 serde_json = "1.0"
 solana-program-test = "=1.9.6"
