--- a/token-metadata/js/package.json
+++ b/token-metadata/js/package.json
@@ -12,6 +12,7 @@
     "postpublish": "git push origin && git push origin --tags",
     "build:docs": "typedoc",
     "build": "rimraf dist && tsc -p tsconfig.json",
+    "api:gen": "node scripts/api-gen-ts.js && prettier --write ./src/**/*.ts",
     "pretest": "yarn build",
     "amman:start": "DEBUG=\"*\" amman validator",
     "amman:stop": "pkill solana-test-validator",
