--- a/auction-house/js/package.json
+++ b/auction-house/js/package.json
@@ -50,6 +50,7 @@
     "prettier": "^2.5.1",
     "rimraf": "^3.0.2",
     "spok": "^1.4.3",
-    "tape": "^5.3.2"
+    "tape": "^5.3.2",
+    "typescript": "^4.5.5"
   }
 }
