--- a/token-metadata/js/package.json
+++ b/token-metadata/js/package.json
@@ -46,7 +46,7 @@
   },
   "devDependencies": {
     "@metaplex-foundation/amman": "^0.1.0",
-    "@solana/spl-token": "0.1.8",
+    "@solana/spl-token": "^0.1.8",
     "@types/debug": "^4.1.7",
     "@types/tape": "^4.13.2",
     "debug": "^4.3.3",
