--- a/candy-machine/js/package.json
+++ b/candy-machine/js/package.json
@@ -38,9 +38,9 @@
   "author": "Metaplex Maintainers <contact@metaplex.com>",
   "license": "Apache-2.0",
   "dependencies": {
-    "@metaplex-foundation/beet": "0.0.0",
-    "@metaplex-foundation/beet-solana": "0.0.0",
-    "@solana/web3.js": "^1.31.0"
+    "@metaplex-foundation/beet": "^0.0.8",
+    "@metaplex-foundation/beet-solana": "^0.0.6",
+    "@solana/web3.js": "^1.35.1"
   },
   "devDependencies": {
     "eslint": "^8.3.0",
