--- a/candy-machine/program/Cargo.toml
+++ b/candy-machine/program/Cargo.toml
@@ -21,9 +21,11 @@ default = []
 [dependencies]
 anchor-lang = "=0.19.0"
 arrayref = "0.3.6"
-spl-token = { version="3.1.1", features = [ "no-entrypoint" ] }
-mpl-token-metadata = { version = "1.2.3", features = [ "no-entrypoint" ] }
-spl-associated-token-account = {version = "1.0.3", features = ["no-entrypoint"]}
+spl-token = { version = "3.1.1", features = ["no-entrypoint"] }
+mpl-token-metadata = { version = "1.2.4", features = ["no-entrypoint"] }
+spl-associated-token-account = { version = "1.0.3", features = [
+  "no-entrypoint",
+] }
 anchor-spl = "=0.19.0"
 solana-program = "1.8.9"
 solana-gateway = "0.1.1"
